--- a/jõuludest.html
+++ b/jõuludest.html
@@ -12,9 +12,9 @@
         <div class="row">
               
             <ul class="main-nav">
-                <li><a href="/"> AVALEHT </a></li>
+                <li><a href="./index.html"> AVALEHT </a></li>
                 <li><a href="./jõuludest.html"> JÕULUDEST </a></li>
-                <li><a href="./jõulutoit.html"> JÕULUTOIT </a></li>
+                <li><a href="./joulutoit.html"> JÕULUTOIT </a></li>
                 <li><a href="./jõulufilmid.html"> JÕULUFILMID</a></li>
 
             
