--- a/jõulufilmid.html
+++ b/jõulufilmid.html
@@ -11,7 +11,7 @@
     <div class="row">
                            
     <ul class="main-nav">
-            <li class="active"><a href="indeks.html"> AVALEHT </a></li>
+            <li><a href="index.html"> AVALEHT </a></li>
             <li><a href="jõuludest.html"> JÕULUDEST </a></li>
             <li><a href="joulutoit.html"> JÕULUTOIT </a></li>
             <li><a href="jõulufilmid.html"> JÕULUFILMID </a></li>
