--- a/joulutoit.html
+++ b/joulutoit.html
@@ -49,6 +49,7 @@
                                 <li>või</li>
                                 <li>tangupuder</li>
                             </ul>
+                            <img class="tangupilt" src="tang.jpg" width="342,5" height="179,5">
                     </div>        
 
                     <div class="column" style="background-color:rgba(100, 150, 100, 0.8)">
@@ -80,7 +81,9 @@
                                 <li>õlu</li>
                                 <li>vahuvein</li>
                                 <li>glögi</li>
+                                
                              </ul>
+                             <img class="teepilt" src="tee.jpg" width="342,5" height="205">
                     </div>
                 </div>
             </div>
