--- a/jõuludest.html
+++ b/jõuludest.html
@@ -23,8 +23,11 @@
         </nav>
         
         <div>    
-        <h3>Huvitavaid fakte jõuludest</h3>
-            <ul class= "punktid">     
+            <h3>Huvitavaid fakte jõuludest</h3>
+        </div>
+
+        <div>
+            <ul class= "punktid" style="background-color: rgba(233, 69, 69, 0.3)">     
                 <li>Fakt nr 1: jõulud on mitmevärvilised.</li>
                     Jõule võib seostada paljude imeilusate värvidega. Ametlikeks jõuluvärvideks on punane, mis 
                     sümboliseerib Jeesuse verd; roheline, mis tähistab igihalja puu alati kestvat elu, ja kuld,
@@ -52,11 +55,11 @@
                     Ingliskeelne sõna „Christmas” on lühend „Kristuse missast”, mida peetakse 25. detsembril (suures osas maailmast) Jeesus Kristuse sünni auks.
                     Kuid mitmed ajaloolased väidavad, et 25. detsember ei pruugi olla üldse Jeesuse tõeline sünnipäev. Lihtne tõsiasi on see, et me lihtsalt ei
                     tea täpselt, millal Jeesus sündis. Praegu laialdaselt tunnustatud kuupäev pandi paika 4. sajandil pKr.
-                </ul>
+            </ul>
         </div>
 
         <div class="media">
-                <iframe width="300" height="220" src="https://www.youtube.com/embed/VfLf7A_-1Vw" frameborder="0" allowfullscreen="allowfullscreen" data-link="https://www.youtube.com/watch?v=VfLf7A_-1Vw"></iframe>
+                <iframe width="300" height="220" src="https://www.youtube.com/embed/VfLf7A_-1Vw? controls=0"></iframe>
 
         </div>
 
