--- a/jõuludest.html
+++ b/jõuludest.html
@@ -59,7 +59,8 @@
         </div>
 
         <div class="media">
-                <iframe width="300" height="220" src="https://www.youtube.com/embed/VfLf7A_-1Vw? controls=0"></iframe>
+                <iframe width="340" height="220" src="https://www.youtube.com/embed/8ZUOYO9qljs" frameborder="0" allowfullscreen="allowfullscreen" data-link="https://www.youtube.com/watch?v=8ZUOYO9qljs"></iframe>
+
 
         </div>
 
