--- a/joulutoit.html
+++ b/joulutoit.html
@@ -15,7 +15,7 @@
             <nav>
             <div class="row">
                 
-                <ul class="main-nav">
+                <ul class="main-nav2">
                         <li><a href="./index.html"> AVALEHT </a></li>
                         <li><a href="./jõuludest.html"> JÕULUDEST </a></li>
                         <li><a href="./joulutoit.html"> JÕULUTOIT </a></li>
