--- a/jõuludest.html
+++ b/jõuludest.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
     <title>Jõuludest</title>
     <link href="style3.css" rel="stylesheet" type="text/css">
 </head>
