--- a/joulutoit.html
+++ b/joulutoit.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="utf-8">
     <title>Jõulufilmid</title>
     <link href="style2.css" rel="stylesheet" type="text/css">
   
