--- a/jõulufilmid.html
+++ b/jõulufilmid.html
@@ -11,10 +11,10 @@
     <div class="row">
                            
     <ul class="main-nav">
-            <li><a href="index.html"> AVALEHT </a></li>
-            <li><a href="jõuludest.html"> JÕULUDEST </a></li>
-            <li><a href="joulutoit.html"> JÕULUTOIT </a></li>
-            <li><a href="jõulufilmid.html"> JÕULUFILMID </a></li>
+            <li><a href="./index.html"> AVALEHT </a></li>
+            <li><a href="./jõuludest.html"> JÕULUDEST </a></li>
+            <li><a href="./joulutoit.html"> JÕULUTOIT </a></li>
+            <li><a href="./jõulufilmid.html"> JÕULUFILMID </a></li>
                          
      </ul>
      </div>
