--- a/jõuludest.html
+++ b/jõuludest.html
@@ -28,39 +28,39 @@
         </div>
 
         <div>
-            <ul class= "punktid" style="background-color: rgba(233, 69, 69, 0.3)">     
+            <ul class= "punktid">     
                 <li>Fakt nr 1: jõulud on mitmevärvilised.</li>
-                    Jõule võib seostada paljude imeilusate värvidega. Ametlikeks jõuluvärvideks on punane, mis 
+                    <p>Jõule võib seostada paljude imeilusate värvidega. Ametlikeks jõuluvärvideks on punane, mis 
                     sümboliseerib Jeesuse verd; roheline, mis tähistab igihalja puu alati kestvat elu, ja kuld,
-                     mis on kingituste ja headuse sümbol.
+                     mis on kingituste ja headuse sümbol.</p>
                 <li>Fakt nr 2: jõule tähistatakse paljudel eri viisidel.</li>
-                    Esiteks pärinevad jõulud kristlikust usupühast, kuid tänapäeval tähistatakse neid sageli 
+                    <p>Esiteks pärinevad jõulud kristlikust usupühast, kuid tänapäeval tähistatakse neid sageli 
                     ka ilmaliku pühana. Teiseks tähistatakse maailma eri paigus jõule väga erinevalt, sõltuvalt oma 
                     uskumustest ja traditsioonidest. Tavaliselt on jõulud 25. detsember, kuid isegi see ei pea paika.
-                     Näiteks tähistavad kirikud, mis kasutavad veel Juliuse kalendrit, jõule hoopis 7. jaanuaril.
+                     Näiteks tähistavad kirikud, mis kasutavad veel Juliuse kalendrit, jõule hoopis 7. jaanuaril.</p>
                 <li>Fakt nr 3: keda tänada jõulupuu eest.</li>
-                    Kui läheme tagasi sinna, kust algas komme jõulupuu püsti panna, tuleks seda ilusat puud kutsuda 
+                    <p>Kui läheme tagasi sinna, kust algas komme jõulupuu püsti panna, tuleks seda ilusat puud kutsuda 
                     „Tannenbaum”, „Weihnachtsbaum” või „Christbaum”. Nimelt olid sakslased esimesed, kes 15. ja 16. sajandil
-                    metsast puu koju tassisid ja selle jõulude auks ära ehtisid.
+                    metsast puu koju tassisid ja selle jõulude auks ära ehtisid.</p>
                 <li>Fakt nr 4: esimesed jõulupuu ehted olid tõesti erilised.</li>
-                    Esimesteks eheteks jõulupuul olid õunad: rohelised, punased, kollased ja mõnikord kahjuks ka pruunid sellepärast et, 
-                    nende söödavate kuuseehete eluiga oli väga lühike.
+                    <p>Esimesteks eheteks jõulupuul olid õunad: rohelised, punased, kollased ja mõnikord kahjuks ka pruunid sellepärast et, 
+                    nende söödavate kuuseehete eluiga oli väga lühike.</p>
                 <li>Fakt nr 5: üle laia lageda...</li>
-                    Jõululaule on küll väga-väga palju, kuid suure osa maailma jaoks on lemmikjõululauluks alati „Aisakellad”
-                    (inglise keeles „Jingle Bells”). Nimelt on see laul rohkem kui 150 aastat vana.
+                    <p>Jõululaule on küll väga-väga palju, kuid suure osa maailma jaoks on lemmikjõululauluks alati „Aisakellad”
+                    (inglise keeles „Jingle Bells”). Nimelt on see laul rohkem kui 150 aastat vana.</p>
                 <li>Fakt nr 6: jõuluvana ei ole mitte alati olnud habemik.</li>
-                    Jõuluvana habe on „kõigest” 150-aastane ja seda kujutas esmakordselt Saksa-Ameerika karikaturist Thomas Mast.
+                    <p>Jõuluvana habe on „kõigest” 150-aastane ja seda kujutas esmakordselt Saksa-Ameerika karikaturist Thomas Mast.
                     Muidugi on ka varasemaid kirjeldusi habemega mehest, kes inimestele kingitusi toob, kuid Masti karikatuur oli see, mis muutis 
-                    jõuluvana enamikus riikides populaarseks just sellise välimusega, nagu me tänapäeval harjunud oleme.
+                    jõuluvana enamikus riikides populaarseks just sellise välimusega, nagu me tänapäeval harjunud oleme.</p>
                 <li>Fakt nr 7: jõulupühad.</li>
-                    Ingliskeelne sõna „Christmas” on lühend „Kristuse missast”, mida peetakse 25. detsembril (suures osas maailmast) Jeesus Kristuse sünni auks.
+                    <p>Ingliskeelne sõna „Christmas” on lühend „Kristuse missast”, mida peetakse 25. detsembril (suures osas maailmast) Jeesus Kristuse sünni auks.
                     Kuid mitmed ajaloolased väidavad, et 25. detsember ei pruugi olla üldse Jeesuse tõeline sünnipäev. Lihtne tõsiasi on see, et me lihtsalt ei
-                    tea täpselt, millal Jeesus sündis. Praegu laialdaselt tunnustatud kuupäev pandi paika 4. sajandil pKr.
+                    tea täpselt, millal Jeesus sündis. Praegu laialdaselt tunnustatud kuupäev pandi paika 4. sajandil pKr.</p>
             </ul>
         </div>
 
         <div class="media">
-                <iframe width="340" height="220" src="https://www.youtube.com/embed/8ZUOYO9qljs" frameborder="0" allowfullscreen="allowfullscreen" data-link="https://www.youtube.com/watch?v=8ZUOYO9qljs"></iframe>
+                <iframe width="320" height="220" src="https://www.youtube.com/embed/8ZUOYO9qljs" frameborder="0" allowfullscreen="allowfullscreen" data-link="https://www.youtube.com/watch?v=8ZUOYO9qljs"></iframe>
 
 
         </div>
