--- a/joulutoit.html
+++ b/joulutoit.html
@@ -35,7 +35,7 @@
             <div>
                 
                 <div class="row">
-                    <div class="column" style="background-color:rgba(150, 100, 100, 0.8)">
+                    <div class="column" id="punane">
                         <h3 class= "toidudvarem">Jõulutoidud Eestis 20. sajandil ja varemgi</h3>
                             <ul class= "vanadtoidud">
                                 <li>jõulukäkk ehk jõululeib</li>
@@ -52,7 +52,7 @@
                             <img class="tangupilt" src="tang.jpg" width="343" height="178">
                     </div>        
 
-                    <div class="column" style="background-color:rgba(100, 150, 100, 0.8)">
+                    <div class="column" id="roheline">
                         <h3 class="toidudpraegu">Jõulutoidud tänapäeva Eestis</h3>
                             <ul class= "uuedtoidud">
                                 <li>seapraad</li>
@@ -73,7 +73,7 @@
                             </ul>
                     </div>
 
-                    <div class="column" style="background-color: rgba(100, 100, 150, 0.8)">
+                    <div class="column" id="sinine">
                         <h3 class="jõulujoogid">Traditsioonilised jõulujoogid</h3>
                             <ul class= 'joogid'>
                                 <li>morss</li>
